Fixes path issues in attempts to seed app.

--- a/bloc-books/app/views/books/index.html.erb
+++ b/bloc-books/app/views/books/index.html.erb
@@ -1,8 +1,8 @@
 <h1>All books</h1>
 
 <% books.each do |book| %>
-  <p><b>Name: </b><%= books.name %></p>
-  <p><b>Author: </b><%= books.author %></p>
-  <p><b>Pages: </b><%= books.pages %></p>
+  <p><b>Name: </b><%= book.name %></p>
+  <p><b>Author: </b><%= book.author %></p>
+  <p><b>Pages: </b><%= book.pages %></p>
   <br>
 <% end %>
