Adds pry gem, binding in show method for BooksController, and hard codes show view as proof of concept

--- a/bloc-books/app/views/books/index.html.erb
+++ b/bloc-books/app/views/books/index.html.erb
@@ -4,5 +4,6 @@
   <p><b>Name: </b><%= book.name %></p>
   <p><b>Author: </b><%= book.author %></p>
   <p><b>Pages: </b><%= book.pages %></p>
+  <p><b>ID? </b><%= book.id %></p>
   <br>
 <% end %>
